src/objects/Seller_TAT_Swimline__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seller_TAT_Breach_ID__c</fullName>
        <label>Seller TAT Breach ID</label>
        <referenceTo>Seller_TAT_Breach__c</referenceTo>
        <relationshipLabel>Seller TAT Swimline</relationshipLabel>
        <relationshipName>Seller_TAT_Swimline</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Swimline_End_Date__c</fullName>
        <label>Swimline End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Swimline_Start_Date__c</fullName>
        <label>Swimline Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TAT_Swimline_ID__c</fullName>
        <label>TAT Swimline ID</label>
        <referenceTo>TAT_Swimline__c</referenceTo>
        <relationshipLabel>Seller TAT Swimline</relationshipLabel>
        <relationshipName>Seller_TAT_Swimline</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Seller TAT Swimline</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Seller_TAT_Breach_ID__c</columns>
        <columns>TAT_Swimline_ID__c</columns>
        <columns>Swimline_Start_Date__c</columns>
        <columns>Swimline_End_Date__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seller TAT Swimline</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>